--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/draft-js": "^0.11.9",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "and": "^0.0.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-markdown": "^0.6.0",
     "firebase": "^9.9.1",
+    "for": "^0.1.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "sass": "^1.53.0",
+    "types": "^0.1.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
