--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-draft-wysiwyg": "^1.13.4",
     "and": "^0.0.3",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "firebase": "^9.9.1",
     "for": "^0.1.0",
