--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "draftjs-to-markdown": "^0.6.0",
     "firebase": "^9.9.1",
     "for": "^0.1.0",
+    "framer-motion": "^7.2.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
