--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-draft-wysiwyg": "^1.13.4",
     "and": "^0.0.3",
     "dayjs": "^1.11.4",
+    "dompurify": "^2.3.10",
+    "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
