--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "firebase": "^9.9.1",
     "for": "^0.1.0",
     "framer-motion": "^7.2.0",
+    "gapi-script": "^1.2.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "sass": "^1.53.0",
